--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -49,6 +49,7 @@
         "position": "Chức vụ",
         "role": "Vai trò",
         "image": "Ảnh đại diện",
-        "save": "Lưu "
+        "save": "Lưu",
+        "edit": "Chỉnh sửa"
     }
 }
