--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -41,6 +41,7 @@
         }
     },
     "manage-user": {
+        "title": "Manage User",
         "add": "Add user",
         "email": "Email",
         "password": "Password",
@@ -64,5 +65,19 @@
         "handbook": "Handbook",
         "outstanding-doctor": "Outstanding doctor",
         "more-info": "More"
+    },
+    "manage-schedule": {
+        "title": "Manage Schedule",
+        "choose-doctor": "Choose doctor",
+        "choose-date": "Choose date",
+        "save": "Save"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Schedule",
+            "no-schedule": "The doctor has no appointments during this time, please choose another date",
+            "choose": "Choose",
+            "book-free": "and book (free)"
+        }
     }
 }
