--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -41,6 +41,7 @@
         }
     },
     "manage-user": {
+        "title": "Quản lý người dùng",
         "add": "Thêm người dùng",
         "email": "Email",
         "password": "Mật khẩu",
@@ -64,5 +65,19 @@
         "handbook": "Cẩm nang",
         "outstanding-doctor": "Bác sĩ nổi bật",
         "more-info": "Xem thêm"
+    },
+    "manage-schedule": {
+        "title": "Quản lý lịch khám",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn ngày khác",
+            "choose": "Chọn",
+            "book-free": "và đặt (miễn phí)"
+        }
     }
 }
