--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -85,7 +85,8 @@
             "more-detail": "Xem chi tiết",
             "hide-detail": "Ẩn chi tiết",
             "payment": "Phương thức thanh toán",
-            "free-booking": "Miễn phí đặt lịch"
+            "free-booking": "Miễn phí đặt lịch",
+            "more": "Xem thêm"
         },
         "booking-modal": {
             "title": "Đặt lịch khám",
