feat: add DetailClinic component

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -60,6 +60,7 @@
         "search": "Search",
         "search-placeholder": "Search for doctors, clinics, hospitals",
         "specialty": "Specialty",
+        "clinic": "Health facility",
         "doctor": "Doctor",
         "health-facility": "Health facility",
         "handbook": "Handbook",
