--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -60,6 +60,7 @@
         "search": "Tìm kiếm",
         "search-placeholder": "Tìm kiếm bác sĩ, phòng khám, bệnh viện",
         "specialty": "Chuyên khoa",
+        "clinic": "Cơ sở y tế",
         "doctor": "Bác sĩ",
         "health-facility": "Cơ sở y tế",
         "handbook": "Cẩm nang",
