fix: add manage user modal

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -55,7 +55,8 @@
         "role": "Role",
         "image": "Avatar",
         "save": "Save ",
-        "edit": "Edit"
+        "edit": "Edit",
+        "cancel": "Cancel"
     },
     "homepage": {
         "search": "Search",
